<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NicolasCageApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_scores">Scores</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_abcs_with_nic">AbcsWithNic</string>
    <string name="takeQuiz">TAKE THE QUIZ</string>
    <string name="title_activity_settings">Settings</string>
    <string name="slow_down_ABCs">Slow down A, B, C game</string>
    <string name="noSlowDown">NICOLAS CAGE SLOWS DOWN FOR NO MAN</string>
    <string name="score_title">Scores</string>
    <string name="rattle_the_cage_title">Rattle The Cage</string>
    <string name="rattle_the_cage_label">Total Score: </string>
    <string name="title_activity_score_menu">ScoreMenu</string>
    <string name="score_menu_title">Do you REALLY get NICOLAS CAGE?</string>
    <string name="rattle_the_cage_score_description">Did you have the courage to face the darkest depths of his harrowing yet awe-inspring insanity in RATTLE THE CAGE?</string>
    <string name="title_activity_rattle_the_cage_score">RattleTheCageScore</string>
    <string name="abcs_score_description">Were you able to keep up with his wild antics in A,B,C\'s with N,I,C?</string>
    <string name="title_activity_abcs_score">ABCsScore</string>
    <string name="cageclues_score_description">How well do you understand the complex and singular enigma that is Nicolas Cage, the passionate and fearless soul of Nicolas Cage—within or without the context of CAGE CLUES, WHAT DID HE LOSE?</string>
    <string name="title_activity_cage_clues_score">CageCluesScore</string>
    <string name="about_dialog_title">About</string>
    <string name="about_dialog_description">These games are mere vehicles in order to 
        explore the glory and insanity that is Nicolas Cage.  Enjoy.</string>
    <string name="about_dialog_names">Nam Nguyen, Stephen Ridings, and Kyle Nicola</string>
    <string name="help_dialog_title">Help</string>
    <string name="help_dialog_description">Go watch some Nicolas Cage movies you dummy</string>
    <string name="quit_question">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hi_score">RECORD:</string>
    <string name="most_recent_score">MOST RECENT:</string>
    <string name="perf_priceless">PRICELESS</string>
    <string name="rattle_text_pos_1">Shake Him</string>
    <string name="rattle_text_pos_2">Tell him he\'s a National Tragedy</string>
    <string name="rattle_text_pos_3">RAISE HIS ANGERZONA</string>
    <string name="rattle_text_pos_4">SHAKE HIS FACE/OFF</string>
    <string name="rattle_text_pos_5">AHHHHHHHHHHHHH</string>
    <string name="rattle_text_neg_2">Why are you weak?</string>
    <string name="rattle_text_neg_3"></string>
    <string name="rattle_text_neg_4">You such a disappointment</string>
    <string name="settings_dialog_title">Settings</string>


</resources>
