<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.nicolascageapp.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="ifRoom"
        android:title="@string/action_help"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="ifRoom"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_scores"
        android:showAsAction="never"
        android:title="@string/action_scores"/>
    <item
        android:id="@+id/action_exit"
        android:showAsAction="never"
        android:title="@string/action_exit"/>
    
    
    

</menu>
