<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/score"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/score_title"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
            android:id="@+id/rattle_the_cage_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/score"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/rattle_the_cage_title"
            android:textSize="24sp" />
    
    <TextView
        android:id="@+id/rattle_the_cage_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rattle_the_cage_title"
        android:layout_marginTop="15dp"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:text="@string/rattle_the_cage_label"
        android:textSize="20sp" />
    
    <TextView
            android:id="@+id/rattle_the_cage_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/rattle_the_cage_title"
            android:layout_toRightOf="@+id/rattle_the_cage_label"
            android:gravity="left"
            android:text="0"
            android:textSize="20sp" />
    
    <TextView
            android:id="@+id/rattle_the_cage_score_extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/rattle_the_cage_title"
            android:layout_toRightOf="@+id/rattle_the_cage_score"
            android:gravity="left"
            android:text=""
            android:textSize="20sp" />
    
    </RelativeLayout>
</LinearLayout>
